testsuite/tests/rep-poly/UnliftedNewtypesLevityBinder.stderr
UnliftedNewtypesLevityBinder.hs:15:7: error: [GHC-55287]
    • Unsaturated use of a representation-polymorphic unlifted newtype.
      The argument of the newtype constructor ‘IdentC’
      does not have a fixed runtime representation.
      Its type is:
        a0 :: TYPE r0
      When unifying:
        • a
        • a0
      Cannot unify ‘r’ with the type variable ‘r0’
      because the former is not a concrete ‘RuntimeRep’.
    • In the expression: IdentC
      In an equation for ‘bad’: bad = IdentC

